// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RampsProviderSelectionModal keeps the provider list visible while quotes load 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div />
  <div
    class=""
  >
    <div
      aria-hidden="true"
      class="bg-overlay-default fixed inset-0 z-[1050] motion-safe:animate-fade-in"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="fixed inset-0 z-[1050] flex justify-center p-4 sm:py-8 md:py-12 [@media(max-height:475px)]:p-2 items-center"
      >
        <section
          aria-modal="true"
          class="flex-col items-stretch justify-start pt-4 pb-4 bg-default flex max-h-full w-full rounded-lg shadow-lg motion-safe:animate-slide-up max-w-[360px] border-0"
          data-testid="ramps-provider-selection-screen"
          role="dialog"
        >
          <header
            class="grid grid-cols-[1fr_auto_1fr] items-center px-4 pb-4"
          >
            <div
              class="col-start-2 col-end-3 w-full"
            >
              <h4
                class="text-default text-s-heading-sm leading-s-heading-sm tracking-s-heading-sm md:text-l-heading-sm md:leading-l-heading-sm md:tracking-l-heading-sm font-bold font-default text-center"
              >
                Choose provider
              </h4>
            </div>
            <div
              class="col-start-3 justify-self-end"
            >
              <button
                aria-label="Close"
                class="inline-flex items-center justify-center p-0 h-8 w-8 rounded-lg bg-transparent hover:bg-hover active:bg-pressed text-icon-default"
              >
                <svg
                  class="inline-block w-6 h-6 text-inherit"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.4 19 5 17.6l5.6-5.6L5 6.4 6.4 5l5.6 5.6L17.6 5 19 6.4 13.4 12l5.6 5.6-1.4 1.4-5.6-5.6z"
                  />
                </svg>
              </button>
            </div>
          </header>
          <div
            class="flex-1 overflow-y-auto pb-4"
          >
            <div
              class="flex flex-col"
            >
              <button
                class="inline-flex items-center justify-center font-medium text-default overflow-hidden relative transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] w-full rounded-none px-4 py-3 min-h-14 min-w-0 h-auto hover:bg-hover active:bg-pressed bg-background-muted"
                data-testid="ramps-provider-item-/providers/transak"
                role="button"
              >
                <div
                  class="flex flex-row gap-3 items-center justify-between w-full"
                >
                  <div
                    class="flex flex-col gap-1 items-start min-w-0 flex-1"
                  >
                    <div
                      class="flex flex-row gap-2 items-center w-full min-w-0"
                    >
                      <p
                        class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default truncate text-left"
                      >
                        Transak
                      </p>
                    </div>
                  </div>
                  <div
                    class="flex flex-row gap-2 items-center shrink-0"
                  >
                    <div
                      class="flex flex-col gap-1 items-end"
                      data-testid="ramps-quote-display-loading"
                    >
                      <div
                        aria-hidden="true"
                        class="relative overflow-hidden rounded"
                        style="height: 16px; width: 80px;"
                      >
                        <div
                          aria-hidden="true"
                          class="pointer-events-none absolute inset-0 rounded bg-icon-alternative motion-safe:animate-skeleton-pulse"
                        />
                      </div>
                      <div
                        aria-hidden="true"
                        class="relative overflow-hidden rounded"
                        style="height: 16px; width: 60px;"
                      >
                        <div
                          aria-hidden="true"
                          class="pointer-events-none absolute inset-0 rounded bg-icon-alternative motion-safe:animate-skeleton-pulse"
                        />
                      </div>
                    </div>
                    <svg
                      class="inline-block w-5 h-5 text-primary-default"
                      data-testid="ramps-provider-item-selected"
                      fill="currentColor"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m9.55 17.886-5.7-5.7 1.425-1.425 4.275 4.275 9.175-9.176 1.425 1.425z"
                      />
                    </svg>
                  </div>
                </div>
              </button>
              <button
                class="inline-flex items-center justify-center font-medium text-default overflow-hidden relative transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] w-full rounded-none px-4 py-3 min-h-14 min-w-0 h-auto hover:bg-hover active:bg-pressed bg-transparent"
                data-testid="ramps-provider-item-/providers/moonpay"
                role="button"
              >
                <div
                  class="flex flex-row gap-3 items-center justify-between w-full"
                >
                  <div
                    class="flex flex-col gap-1 items-start min-w-0 flex-1"
                  >
                    <div
                      class="flex flex-row gap-2 items-center w-full min-w-0"
                    >
                      <p
                        class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default truncate text-left"
                      >
                        MoonPay
                      </p>
                    </div>
                  </div>
                  <div
                    class="flex flex-row gap-2 items-center shrink-0"
                  >
                    <div
                      class="flex flex-col gap-1 items-end"
                      data-testid="ramps-quote-display-loading"
                    >
                      <div
                        aria-hidden="true"
                        class="relative overflow-hidden rounded"
                        style="height: 16px; width: 80px;"
                      >
                        <div
                          aria-hidden="true"
                          class="pointer-events-none absolute inset-0 rounded bg-icon-alternative motion-safe:animate-skeleton-pulse"
                        />
                      </div>
                      <div
                        aria-hidden="true"
                        class="relative overflow-hidden rounded"
                        style="height: 16px; width: 60px;"
                      >
                        <div
                          aria-hidden="true"
                          class="pointer-events-none absolute inset-0 rounded bg-icon-alternative motion-safe:animate-skeleton-pulse"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </button>
            </div>
          </div>
        </section>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`RampsProviderSelectionModal matches snapshot when empty 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div />
  <div
    class=""
  >
    <div
      aria-hidden="true"
      class="bg-overlay-default fixed inset-0 z-[1050] motion-safe:animate-fade-in"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="fixed inset-0 z-[1050] flex justify-center p-4 sm:py-8 md:py-12 [@media(max-height:475px)]:p-2 items-center"
      >
        <section
          aria-modal="true"
          class="flex-col items-stretch justify-start pt-4 pb-4 bg-default flex max-h-full w-full rounded-lg shadow-lg motion-safe:animate-slide-up max-w-[360px] border-0"
          data-testid="ramps-provider-selection-empty"
          role="dialog"
        >
          <header
            class="grid grid-cols-[1fr_auto_1fr] items-center px-4 pb-4"
          >
            <div
              class="col-start-2 col-end-3 w-full"
            >
              <h4
                class="text-default text-s-heading-sm leading-s-heading-sm tracking-s-heading-sm md:text-l-heading-sm md:leading-l-heading-sm md:tracking-l-heading-sm font-bold font-default text-center"
              >
                Choose provider
              </h4>
            </div>
            <div
              class="col-start-3 justify-self-end"
            >
              <button
                aria-label="Close"
                class="inline-flex items-center justify-center p-0 h-8 w-8 rounded-lg bg-transparent hover:bg-hover active:bg-pressed text-icon-default"
              >
                <svg
                  class="inline-block w-6 h-6 text-inherit"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.4 19 5 17.6l5.6-5.6L5 6.4 6.4 5l5.6 5.6L17.6 5 19 6.4 13.4 12l5.6 5.6-1.4 1.4-5.6-5.6z"
                  />
                </svg>
              </button>
            </div>
          </header>
          <div
            class="flex flex-col gap-2 items-center justify-center flex-1 px-4 py-8"
          >
            <p
              class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
            >
              No providers available.
            </p>
          </div>
        </section>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`RampsProviderSelectionModal matches snapshot while loading 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div />
  <div
    class=""
  >
    <div
      aria-hidden="true"
      class="bg-overlay-default fixed inset-0 z-[1050] motion-safe:animate-fade-in"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="fixed inset-0 z-[1050] flex justify-center p-4 sm:py-8 md:py-12 [@media(max-height:475px)]:p-2 items-center"
      >
        <section
          aria-modal="true"
          class="flex-col items-stretch justify-start pt-4 pb-4 bg-default flex max-h-full w-full rounded-lg shadow-lg motion-safe:animate-slide-up max-w-[360px] border-0"
          data-testid="ramps-provider-selection-loading"
          role="dialog"
        >
          <header
            class="grid grid-cols-[1fr_auto_1fr] items-center px-4 pb-4"
          >
            <div
              class="col-start-2 col-end-3 w-full"
            >
              <h4
                class="text-default text-s-heading-sm leading-s-heading-sm tracking-s-heading-sm md:text-l-heading-sm md:leading-l-heading-sm md:tracking-l-heading-sm font-bold font-default text-center"
              >
                Choose provider
              </h4>
            </div>
            <div
              class="col-start-3 justify-self-end"
            >
              <button
                aria-label="Close"
                class="inline-flex items-center justify-center p-0 h-8 w-8 rounded-lg bg-transparent hover:bg-hover active:bg-pressed text-icon-default"
              >
                <svg
                  class="inline-block w-6 h-6 text-inherit"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.4 19 5 17.6l5.6-5.6L5 6.4 6.4 5l5.6 5.6L17.6 5 19 6.4 13.4 12l5.6 5.6-1.4 1.4-5.6-5.6z"
                  />
                </svg>
              </button>
            </div>
          </header>
          <div
            class="flex flex-col gap-4 flex-1 px-4 pt-2"
            data-testid="ramps-provider-selection-skeleton"
          >
            <div
              class="flex flex-row gap-3 items-center w-full"
            >
              <div
                class="flex flex-col gap-2 min-w-0 flex-1"
              >
                <div
                  aria-hidden="true"
                  class="relative overflow-hidden rounded h-3 w-16"
                >
                  <div
                    aria-hidden="true"
                    class="pointer-events-none absolute inset-0 rounded bg-icon-alternative motion-safe:animate-skeleton-pulse"
                  />
                </div>
                <div
                  aria-hidden="true"
                  class="relative overflow-hidden rounded h-3 w-1/3"
                >
                  <div
                    aria-hidden="true"
                    class="pointer-events-none absolute inset-0 rounded bg-icon-alternative motion-safe:animate-skeleton-pulse"
                  />
                </div>
              </div>
            </div>
            <div
              class="flex flex-row gap-3 items-center w-full"
            >
              <div
                class="flex flex-col gap-2 min-w-0 flex-1"
              >
                <div
                  aria-hidden="true"
                  class="relative overflow-hidden rounded h-3 w-16"
                >
                  <div
                    aria-hidden="true"
                    class="pointer-events-none absolute inset-0 rounded bg-icon-alternative motion-safe:animate-skeleton-pulse"
                  />
                </div>
                <div
                  aria-hidden="true"
                  class="relative overflow-hidden rounded h-3 w-1/3"
                >
                  <div
                    aria-hidden="true"
                    class="pointer-events-none absolute inset-0 rounded bg-icon-alternative motion-safe:animate-skeleton-pulse"
                  />
                </div>
              </div>
            </div>
            <div
              class="flex flex-row gap-3 items-center w-full"
            >
              <div
                class="flex flex-col gap-2 min-w-0 flex-1"
              >
                <div
                  aria-hidden="true"
                  class="relative overflow-hidden rounded h-3 w-16"
                >
                  <div
                    aria-hidden="true"
                    class="pointer-events-none absolute inset-0 rounded bg-icon-alternative motion-safe:animate-skeleton-pulse"
                  />
                </div>
                <div
                  aria-hidden="true"
                  class="relative overflow-hidden rounded h-3 w-1/3"
                >
                  <div
                    aria-hidden="true"
                    class="pointer-events-none absolute inset-0 rounded bg-icon-alternative motion-safe:animate-skeleton-pulse"
                  />
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`RampsProviderSelectionModal matches snapshot with provider quotes 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div />
  <div
    class=""
  >
    <div
      aria-hidden="true"
      class="bg-overlay-default fixed inset-0 z-[1050] motion-safe:animate-fade-in"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="fixed inset-0 z-[1050] flex justify-center p-4 sm:py-8 md:py-12 [@media(max-height:475px)]:p-2 items-center"
      >
        <section
          aria-modal="true"
          class="flex-col items-stretch justify-start pt-4 pb-4 bg-default flex max-h-full w-full rounded-lg shadow-lg motion-safe:animate-slide-up max-w-[360px] border-0"
          data-testid="ramps-provider-selection-screen"
          role="dialog"
        >
          <header
            class="grid grid-cols-[1fr_auto_1fr] items-center px-4 pb-4"
          >
            <div
              class="col-start-2 col-end-3 w-full"
            >
              <h4
                class="text-default text-s-heading-sm leading-s-heading-sm tracking-s-heading-sm md:text-l-heading-sm md:leading-l-heading-sm md:tracking-l-heading-sm font-bold font-default text-center"
              >
                Choose provider
              </h4>
            </div>
            <div
              class="col-start-3 justify-self-end"
            >
              <button
                aria-label="Close"
                class="inline-flex items-center justify-center p-0 h-8 w-8 rounded-lg bg-transparent hover:bg-hover active:bg-pressed text-icon-default"
              >
                <svg
                  class="inline-block w-6 h-6 text-inherit"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.4 19 5 17.6l5.6-5.6L5 6.4 6.4 5l5.6 5.6L17.6 5 19 6.4 13.4 12l5.6 5.6-1.4 1.4-5.6-5.6z"
                  />
                </svg>
              </button>
            </div>
          </header>
          <div
            class="flex-1 overflow-y-auto pb-4"
          >
            <div
              class="flex flex-col"
            >
              <button
                class="inline-flex items-center justify-center font-medium text-default overflow-hidden relative transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] w-full rounded-none px-4 py-3 min-h-14 min-w-0 h-auto hover:bg-hover active:bg-pressed bg-background-muted"
                data-testid="ramps-provider-item-/providers/transak"
                role="button"
              >
                <div
                  class="flex flex-row gap-3 items-center justify-between w-full"
                >
                  <div
                    class="flex flex-col gap-1 items-start min-w-0 flex-1"
                  >
                    <div
                      class="flex flex-row gap-2 items-center w-full min-w-0"
                    >
                      <p
                        class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default truncate text-left"
                      >
                        Transak
                      </p>
                    </div>
                  </div>
                  <div
                    class="flex flex-row gap-2 items-center shrink-0"
                  >
                    <div
                      class="flex flex-col items-end"
                      data-testid="ramps-quote-display"
                    >
                      <p
                        class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
                      >
                        0.05 ETH
                      </p>
                      <p
                        class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
                      >
                        $99.50
                      </p>
                    </div>
                    <svg
                      class="inline-block w-5 h-5 text-primary-default"
                      data-testid="ramps-provider-item-selected"
                      fill="currentColor"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m9.55 17.886-5.7-5.7 1.425-1.425 4.275 4.275 9.175-9.176 1.425 1.425z"
                      />
                    </svg>
                  </div>
                </div>
              </button>
              <div
                class="px-4 py-3"
                data-testid="ramps-provider-separator"
              >
                <p
                  class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-medium font-default"
                >
                  Other options
                </p>
              </div>
              <button
                class="inline-flex items-center justify-center font-medium text-default overflow-hidden relative transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] w-full rounded-none px-4 py-3 min-h-14 min-w-0 h-auto hover:bg-hover active:bg-pressed bg-transparent"
                data-testid="ramps-provider-item-/providers/moonpay"
                role="button"
              >
                <div
                  class="flex flex-row gap-3 items-center justify-between w-full"
                >
                  <div
                    class="flex flex-col gap-1 items-start min-w-0 flex-1"
                  >
                    <div
                      class="flex flex-row gap-2 items-center w-full min-w-0"
                    >
                      <p
                        class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default truncate text-left"
                      >
                        MoonPay
                      </p>
                    </div>
                    <p
                      class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default truncate text-left"
                      data-testid="ramps-provider-item-subtitle-/providers/moonpay"
                    >
                      Quote unavailable.
                    </p>
                  </div>
                  <div
                    class="flex flex-row gap-2 items-center shrink-0"
                  />
                </div>
              </button>
            </div>
          </div>
        </section>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`RampsProviderSelectionModal matches snapshot with providers 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div />
  <div
    class=""
  >
    <div
      aria-hidden="true"
      class="bg-overlay-default fixed inset-0 z-[1050] motion-safe:animate-fade-in"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="fixed inset-0 z-[1050] flex justify-center p-4 sm:py-8 md:py-12 [@media(max-height:475px)]:p-2 items-center"
      >
        <section
          aria-modal="true"
          class="flex-col items-stretch justify-start pt-4 pb-4 bg-default flex max-h-full w-full rounded-lg shadow-lg motion-safe:animate-slide-up max-w-[360px] border-0"
          data-testid="ramps-provider-selection-screen"
          role="dialog"
        >
          <header
            class="grid grid-cols-[1fr_auto_1fr] items-center px-4 pb-4"
          >
            <div
              class="col-start-2 col-end-3 w-full"
            >
              <h4
                class="text-default text-s-heading-sm leading-s-heading-sm tracking-s-heading-sm md:text-l-heading-sm md:leading-l-heading-sm md:tracking-l-heading-sm font-bold font-default text-center"
              >
                Choose provider
              </h4>
            </div>
            <div
              class="col-start-3 justify-self-end"
            >
              <button
                aria-label="Close"
                class="inline-flex items-center justify-center p-0 h-8 w-8 rounded-lg bg-transparent hover:bg-hover active:bg-pressed text-icon-default"
              >
                <svg
                  class="inline-block w-6 h-6 text-inherit"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.4 19 5 17.6l5.6-5.6L5 6.4 6.4 5l5.6 5.6L17.6 5 19 6.4 13.4 12l5.6 5.6-1.4 1.4-5.6-5.6z"
                  />
                </svg>
              </button>
            </div>
          </header>
          <div
            class="flex-1 overflow-y-auto pb-4"
          >
            <div
              class="flex flex-col"
            >
              <button
                class="inline-flex items-center justify-center font-medium text-default overflow-hidden relative transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] w-full rounded-none px-4 py-3 min-h-14 min-w-0 h-auto hover:bg-hover active:bg-pressed bg-background-muted"
                data-testid="ramps-provider-item-/providers/transak"
                role="button"
              >
                <div
                  class="flex flex-row gap-3 items-center justify-between w-full"
                >
                  <div
                    class="flex flex-col gap-1 items-start min-w-0 flex-1"
                  >
                    <div
                      class="flex flex-row gap-2 items-center w-full min-w-0"
                    >
                      <p
                        class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default truncate text-left"
                      >
                        Transak
                      </p>
                    </div>
                  </div>
                  <div
                    class="flex flex-row gap-2 items-center shrink-0"
                  >
                    <svg
                      class="inline-block w-5 h-5 text-primary-default"
                      data-testid="ramps-provider-item-selected"
                      fill="currentColor"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m9.55 17.886-5.7-5.7 1.425-1.425 4.275 4.275 9.175-9.176 1.425 1.425z"
                      />
                    </svg>
                  </div>
                </div>
              </button>
              <button
                class="inline-flex items-center justify-center font-medium text-default overflow-hidden relative transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] w-full rounded-none px-4 py-3 min-h-14 min-w-0 h-auto hover:bg-hover active:bg-pressed bg-transparent"
                data-testid="ramps-provider-item-/providers/moonpay"
                role="button"
              >
                <div
                  class="flex flex-row gap-3 items-center justify-between w-full"
                >
                  <div
                    class="flex flex-col gap-1 items-start min-w-0 flex-1"
                  >
                    <div
                      class="flex flex-row gap-2 items-center w-full min-w-0"
                    >
                      <p
                        class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default truncate text-left"
                      >
                        MoonPay
                      </p>
                    </div>
                  </div>
                </div>
              </button>
            </div>
          </div>
        </section>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</body>
`;
